--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ __ez.queue.addFunc("attach_ezolpl", "attach_ezolpl", ["43fd5809-1750-4ab6-564e-0
 	</ol>
 
 
-	<p>Graecum enim hunc versum nostis omnes-: Suavis laborum est praeteritorum memoria. Qui enim existimabit posse se miserum esse beatus non erit. Si qua in iis corrigere voluit, deteriora fecit. <a href="sample2.html" target="_blank">Si qua in iis corrigere voluit, deteriora fecit.</a> Dic in quovis conventu te omnia facere, ne doleas. Tu quidem reddes; </p>
+	<p>Graecum enim hunc versum nostis omnes-: Suavis laborum est praeteritorum memoria. Qui enim existimabit posse se miserum esse beatus non erit. Si qua in iis corrigere voluit, deteriora fecit. <a href="https://pesricha.github.io/hello-world/" target="_blank">Si qua in iis corrigere voluit, deteriora fecit.</a> Dic in quovis conventu te omnia facere, ne doleas. Tu quidem reddes; </p>
 
 	<ul>
 		<li>Duo Reges: constructio interrete.</li>
